--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -1,12 +1,18 @@
 <div class="pt-5" style="margin-top: 10px;">
-  
+
   <div class="d-flex bd-highlight">
     <div class="flex-grow-1 bd-highlight" style="padding-left: 0px;">
       <h1>Search</h1>
     </div>
     <div class="p-2 bd-highlight" style="padding-right: 0px;">
-      <button (click)="search()" id="searchBtn" class="btn btn-md btn-primary" type="submit">SEARCH</button>
+      <button (click)="getRecordsByConditions()" id="searchBtn" class="btn btn-md btn-primary"
+        type="submit">SEARCH</button>
     </div>
+
+    <div class="p-2 bd-highlight" style="padding-right: 0px;">
+      <button (click)="search()" id="searchBtn" class="btn btn-md btn-primary" type="submit">SEARCH_ALL</button>
+    </div>
+
   </div>
 
   <div #inputForm [formGroup]="historyInputForm">
@@ -17,7 +23,7 @@
         <mat-form-field class="col-md-6" appearance="outline" style="padding-left: 0px; padding-right: 0px;"
           [ngStyle]="{'font-size.px': 15}">
           <mat-label>시작일</mat-label>
-          <input matInput [matDatepicker]="picker1" placeholder="YYYY-MM-DD" formControlName="dateFrom">
+          <input matInput [matDatepicker]="picker1" placeholder="YYYY-MM-DD" formControlName="datefrom">
           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
           <mat-datepicker #picker1></mat-datepicker>
         </mat-form-field>
@@ -25,7 +31,7 @@
         <mat-form-field class="col-md-6" appearance="outline" style="padding-left: 0px; padding-right: 30px;"
           [ngStyle]="{'font-size.px': 15}">
           <mat-label>종료일</mat-label>
-          <input matInput [matDatepicker]="picker2" placeholder="YYYY-MM-DD" name="dateTo" formControlName="dateTo">
+          <input matInput [matDatepicker]="picker2" placeholder="YYYY-MM-DD" name="dateTo" formControlName="dateto">
           <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
           <mat-datepicker #picker2></mat-datepicker>
         </mat-form-field>
@@ -43,7 +49,7 @@
 
 
     <div class="mat-elevation-z8" style="margin-top: 20px;">
-      <table mat-table [dataSource]="dataSource" style="width: 100%;">
+      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 100%;">
 
         <!-- Checkbox Column -->
         <ng-container matColumnDef="select">
@@ -60,7 +66,7 @@
         </ng-container>
 
         <ng-container matColumnDef="seq">
-          <th mat-header-cell *matHeaderCellDef> # </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
           <td mat-cell *matCellDef="let element"> {{element.seq}} </td>
         </ng-container>
 
