1. 변수명 histCar -> carid 로 모두 변경  //  2. 사용내역 입력 page 내 주행거리, 주유내역 input-box 에 숫자만 기입하는 유효성 추가 (로직에만 추가 // error 메시지 표현하는 아직, 금요일에 추가 예정)

--- a/car-mng-app/src/app/history-input/history-input.component.html
+++ b/car-mng-app/src/app/history-input/history-input.component.html
@@ -35,12 +35,12 @@
     <div class="form-row">
       <div class="form-group col-md-4">
         <label for="selectCar" class="col-form-label">차량선택</label>
-        <select id="selectCar" class="form-control" formControlName="histCar"
-          [ngClass]="{ 'is-invalid': submitted && f.histCar.errors }">
-          <option [value]="item.code" *ngFor="let item of histCarList">{{item.name}}</option>
+        <select id="selectCar" class="form-control" formControlName="carid"
+          [ngClass]="{ 'is-invalid': submitted && f.carid.errors }">
+          <option [value]="item.code" *ngFor="let item of caridList">{{item.name}}</option>
         </select>
-        <div *ngIf="submitted && f.histCar.errors" class="invalid-feedback">
-          <div *ngIf="f.histCar.errors.required">차량을 선택하세요</div>
+        <div *ngIf="submitted && f.carid.errors" class="invalid-feedback">
+          <div *ngIf="f.carid.errors.required">차량을 선택하세요</div>
         </div>
       </div>
       <div class="form-group col-md-4">
