--- a/car-mng-app/src/app/history-search/history-search.component.css
+++ b/car-mng-app/src/app/history-search/history-search.component.css
@@ -5,3 +5,16 @@
 th.mat-sort-header-sorted {
   color: black;
 }
+
+
+
+table {
+  text-align: center !important;
+  vertical-align: middle !important;
+  width: 100%;
+}
+
+.mat-header-cell {
+  text-align: center;
+  vertical-align: middle !important;
+}
