--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -8,11 +8,9 @@
       <button (click)="getRecordsByConditions()" id="searchBtn" class="btn btn-md btn-primary"
         type="submit">SEARCH</button>
     </div>
-
     <div class="p-2 bd-highlight" style="padding-right: 0px;">
       <button (click)="search()" id="searchBtn" class="btn btn-md btn-primary" type="submit">SEARCH_ALL</button>
     </div>
-
   </div>
 
   <div #inputForm [formGroup]="historyInputForm">
@@ -33,7 +31,7 @@
         <mat-form-field class="col-md-6" appearance="outline" style="padding-left: 0px; padding-right: 30px;"
           [ngStyle]="{'font-size.px': 15}">
           <mat-label>종료일</mat-label>
-          <input matInput [matDatepicker]="picker2" placeholder="YYYY-MM-DD" name="dateTo" formControlName="dateto"
+          <input matInput [matDatepicker]="picker2" placeholder="YYYY-MM-DD" formControlName="dateto"
             (ngModelChange)="toDateChange($event)" [min]="datefrom">
           <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
           <mat-datepicker #picker2></mat-datepicker>
@@ -45,6 +43,7 @@
       <div class="form-group col-md-12">
         <label for="selectCar" class="col-form-label">차량선택</label>
         <select id="selectCar" class="form-control" formControlName="carid" (ngModelChange)="histcarChange($event)">
+          <option [value]="-1">- 선택 -</option>
           <option [value]="item.code" *ngFor="let item of caridList">{{item.name}}</option>
         </select>
       </div>
@@ -69,7 +68,7 @@
         </ng-container>
 
         <ng-container matColumnDef="seq">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
           <td mat-cell *matCellDef="let element"> {{element.seq}} </td>
         </ng-container>
 
@@ -158,8 +157,8 @@
     </div>
 
     <div class="row justify-content-center" style="margin-top: 30px;">
-      <button id="fix" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">수정</button>
-      <button id="deleteRqt" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">삭제요청</button>
+      <!-- <button id="fix" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">수정</button>
+      <button id="deleteRqt" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">삭제요청</button> -->
       <button (click)="close()" id="closePage" class="btn btn-md btn-primary" type="submit"
         style="margin: 5px;">닫기</button>
     </div>
