input-box 중 이름 입력 부분에 text만 입력하는 유효성 추가  //  코드 정리 및 주석 추가

--- a/car-mng-app/src/app/history-input/history-input.component.html
+++ b/car-mng-app/src/app/history-input/history-input.component.html
@@ -61,6 +61,7 @@
         <div *ngIf="submitted && f.drivernm.errors" class="invalid-feedback">
           <div *ngIf="f.drivernm.errors.required">성명을 입력하세요</div>
         </div>
+        <div style="color: red" *ngIf="historyInputForm.controls['drivernm'].errors?.pattern">문자만 기입하세요</div>
       </div>
     </div>
 
